# sae-variants

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
experiments/: advanced_experiments.py  baselines.py  full_clustering_experiments.py  multi_subspace_experiments.py  quick_test.py  run_experiment.py  scale_comparison.py
src/: __init__.py
src/data/: __init__.py  synthetic.py
src/losses/: __init__.py  reconstruction.py
src/metrics/: __init__.py  evaluation.py
src/models/: __init__.py  clustering.py  subspace.py
src/utils/: __init__.py  training.py
